--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Barbería Alura</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -17,12 +17,12 @@
 
     <header>
         <div class="caja">
-            <h1><img src="imagenes/logo.png" alt="Logo Barbería Alura"></h1>
+            <h1><img src="/imagenes/logo.png" alt="Logo Barbería Alura"></h1>
             <nav>
                 <ul>
 
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/paginas/productos.html">Productos</a></li>
                     <li><a href="#">Contacto</a></li>
 
                 </ul>
@@ -97,7 +97,7 @@
     </main>
 
     <footer>
-        <img src="imagenes/logo-blanco.png" alt="Logo Barbería Alura">
+        <img src="/imagenes/logo-blanco.png" alt="Logo Barbería Alura">
         <p class="copyright">&copy; Copyright Barbería Alura - 2022</p>
     </footer>
 
