Modificar enlaces a imágenes y páginas

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <ul>
 
                     <li><a href="#">Home</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="/paginas/productos.html">Productos</a></li>
+                    <li><a href="/paginas/contacto.html">Contacto</a></li>
 
                 </ul>
             </nav>
