Modificando los archivos para una mejor visualización

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbería</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -22,14 +22,14 @@
                 <ul>
 
                     <li><a href="#">Home</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="./paginas/productos.html">Productos</a></li>
+                    <li><a href="./paginas/contacto.html">Contacto</a></li>
 
                 </ul>
             </nav>
         </div>
     </header>
-    <img class="banner" src="banner/banner.jpg" alt="Se muestra el banner alura">
+    <img class="banner" src="./imagenes/banner.jpg" alt="Se muestra el banner alura">
     <main>
 
         <section class="principal">
@@ -83,7 +83,7 @@
                     <li class="items">Profesionales calificados</li>
                     <li class="items">Puntualidad</li>
                     <li class="items">Limipieza</li>
-                </ul><img class="imagen-diferenciales" src="diferenciales/diferenciales.jpg">
+                </ul><img class="imagen-diferenciales" src="./imagenes/diferenciales.jpg">
             </div>
 
             <div class="video">
