--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - Barbería Alura</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -17,11 +17,11 @@
 
     <header>
         <div class="caja">
-            <h1><img src="imagenes/logo.png"></h1>
+            <h1><img src="../imagenes/logo.png"></h1>
             <nav>
                 <ul>
 
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="#">Productos</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
 
@@ -34,20 +34,20 @@
         <ul class="productos">
             <li>
                 <h2>Cabello</h2>
-                <img src="imagenes/cabello.jpg" alt="Cabello">
+                <img src="../imagenes/cabello.jpg" alt="Cabello">
                 <p class="producto-descripcion">Con Tijera o Máquina a Gusto del Cliente</p>
                 <p class="producto-precio">$COP 10.000</p>
 
             </li>
             <li>
                 <h2>Barba</h2>
-                <img src="imagenes/barba.jpg" alt="Barba">
+                <img src="../imagenes/barba.jpg" alt="Barba">
                 <p class="producto-descripcion">Corte y Diseño Profesional de Barba</p>
                 <p class="producto-precio">$COP 7.000</p>
             </li>
             <li>
                 <h2>Cabello + Barba</h2>
-                <img src="imagenes/cabello+barba.jpg" alt="Cabello + Barba">
+                <img src="../imagenes/cabello+barba.jpg" alt="Cabello + Barba">
                 <p class="producto-descripcion">Paquete Completo de Cabello y Barba</p>
                 <p class="producto-precio">$COP 20.000</p>
             </li>
@@ -56,7 +56,7 @@
     </main>
 
     <footer>
-        <img src="imagenes/logo-blanco.png" alt="Logo Alura">
+        <img src="../imagenes/logo-blanco.png" alt="Logo Alura">
         <p class="copyright">&copy; Copyright Barbería Alura - 2022</p>
     </footer>
 
